01/20/2021
    1. Updated the setSplitPoint methods. They now use the helper method randomValueFromNormalDistribution to create a more
        theoretically sound simulation of a hand shuffle by making random values less likely the more they deviate from the median.

01/17/2021
    1. A variety of additional unit tests for Straights, Flushes, Straight Flushes, Royal Flushes, and their inverses.

01/15/2021
    1. Added overloaded constructors to Player class and PlayingCard class for ease of initializing certain attributes.

01/05/2021
    1. Playing environment started.

01/04/2021
    1. HandEvaluator executes 'checksForMultiples', 'isAFLush', and 'isAStraight' in the constructor.
    2. HandEvaluator now uses the 'sortHand' method, taken from 'isAStraight', since it will need to be sorted anyway.
    3. Getters added to HandEvaluator.
    4. GameOutcome class added. Uses information from the HandEvaluators to compare hands and determine winner. It
        currently determines a winner by hand rank. It does not yet compare further in the event of a ranking match.

12/30/2020
    1. HandEvaluator class added. Currently evaluates for straights and flushes.
    2. 'card.setName()' in DeckOfCards -> buildDeck removed due to issues regarding Jokers. Cards currently no longer
        have names.
    3. Method added to HandEvaluator to check for pairs, trips, and quads in a hand. It currently counts multiples of
       every card. It does not yet determine the final hand rank.

12/27/2020
    1. Minor class changes. user's name is now set in ConsoleMenu and the player object gets it.

12/25/2020
    1. ConsoleMenu's gameToStart field changed from an enum state machine to a String.
    2. GameMode now sets the gameMode by getting gameToStart from ConsoleMenu.

12/24/2020
    1. Added Console Menu class and Game Mode class.
    2. Added a unit test for shuffling.

12/23/2020
    1. Refactored some code from handShuffle into smaller helper methods.