@@ -1,6 +1,7 @@
 01/20/2021
     1. Updated the setSplitPoint methods. They now use the helper method randomValueFromNormalDistribution to create a more
-        theoretically sound simulation of a hand shuffle by making random values less likely the more they deviate from the median.
+       theoretically sound simulation of a hand shuffle by making random values less likely the more they deviate from the median.
+    2. Unit tests updated to print information for visual assessment.
 
 01/17/2021
     1. A variety of additional unit tests for Straights, Flushes, Straight Flushes, Royal Flushes, and their inverses.
